Fix spacing of nav links in nav bar

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -16,7 +16,7 @@ ul {
   margin-right: 5.75em;
 }
 
-li {
+a {
   padding-right: 30px;
 }
 
